CLV-281 fix navigation bar misalignment (#3096)

--- a/src/components/BusinessAvatar/BusinessAvatar.module.css
+++ b/src/components/BusinessAvatar/BusinessAvatar.module.css
@@ -1,8 +1,8 @@
 .avatar {
   display: inline-block;
-  margin-top: 0;
+  margin-top: -0.2rem; /* Use negative margin to keep height consistent with the rest of navigation bar */
+  margin-bottom: -0.2rem;
   margin-right: 1rem;
-  margin-bottom: 0;
   margin-left: 0;
   padding: 0 0.2rem;
   min-width: 2.4rem;
